- Fixing Mission & Vision stretching and changed Post button name

--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -66,6 +66,16 @@ a, a .black--text, a.grey--text, a.subtitle-1, a .black--text {
 .v-card .v-image__image {
   border-radius: 5px!important;
 }
+
+
+/*
+Mission & Vision
+*/
+h3#strategic-goals {
+    margin-bottom: 10px;
+}
+
+
 /*
 Single Post CSS
 */
